# lang_remix

./: .gitmodules  README.md
breakout_cxx/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  shell.nix
breakout_cxx/src/: ball.hpp  box.hpp  collision.hpp  crates.hpp  main.cpp  platform.hpp  scene.hpp
breakout_cxx/test/: collision.hpp  main.cpp
breakout_go/: README.md  go.mod  go.sum  main.go  shell.nix
breakout_go/src/: ball.go  collision.go  crates.go  crates_test.go  option.go  platform.go  rect.go  rect_test.go  scene.go  scene_test.go
breakout_jai/: .gitignore  README.md  main.jai  shell.nix  tests.jai
breakout_odin/: .gitignore  README.md  main.odin  shell.nix
breakout_odin/game/: ball.odin  box.odin  collision.odin  crates.odin  optional.odin  platform.odin  (+1 more)
breakout_rust/: Cargo.toml  README.md  shell.nix
breakout_zig/: .gitignore  README.md  build.zig  shell.nix
fizzbuzz_cxx/: CMakeLists.txt  README.md  main.cpp
fizzbuzz_go/: fizzbuzz.go  go.mod  shell.nix
fizzbuzz_hare/: README.md  main.ha  shell.nix
fizzbuzz_haskell/: .gitignore  Main.hs  README.md  shell.nix
fizzbuzz_jai/: README.md  main.jai
fizzbuzz_odin/: README.md  main.odin  shell.nix
fizzbuzz_roc/: flake.nix  main.roc
fizzbuzz_rust/: README.md
fizzbuzz_v/: .gitignore  README.md  fizzbuzz  fizzbuzz.v  v.mod
fizzbuzz_zig/: README.md  build.zig
fuzzbuzz_cxx/: .gitignore  CMakeLists.txt  README.md  main.cpp
fuzzbuzz_odin/: README.md  main.odin
fuzzbuzz_rust/: Cargo.toml  README.md
fuzzbuzz_v/: README.md  fuzzbuzz.v  v.mod
fuzzbuzz_zig/: README.md  build.zig
(+27 files in other folders)
